--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sasswatch": "sass --watch ./public/stylesheets/src/main.sass:./public/stylesheets/main.css"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,8 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "mysql2": "^1.5.1",
+    "nodemon": "^1.17.5",
+    "sass": "^1.4.0",
     "sequelize": "^4.32.3",
     "sequelize-cli": "^3.2.0"
   }
